# design-pattern-study

./: WORKSPACE
bazel/: buildifier_deps.bzl
design_pattern_study/factory_method/: BUILD.bazel  README.md  animal.h  big_farm.cc  big_farm.h  cat.cc  cat.h  cow.cc  cow.h  dog.cc  dog.h  farm.cc  farm.h  horse.cc  horse.h  main.cc  small_farm.cc  small_farm.h
design_pattern_study/state/: BUILD.bazel  README.md  concrete_states.cc  concrete_states.h  main.cc  person.cc  person.h  state.h
